feat: add shared memo feature
