# api/internal/web/handlers/handler_subscriber.go
@@ -1,12 +1,14 @@
 package handlers
 
 import (
+	"encoding/json"
 	"fmt"
 	"net/http"
 
+	openapi_types "github.com/oapi-codegen/runtime/types"
 	"github.com/samber/lo"
 
-	"github.com/isutare412/web-memo/api/internal/core/ent"
+	"github.com/isutare412/web-memo/api/internal/core/model"
 	"github.com/isutare412/web-memo/api/internal/pkgerr"
 	"github.com/isutare412/web-memo/api/internal/tracing"
 	"github.com/isutare412/web-memo/api/internal/web/gen"
@@ -65,7 +67,7 @@ func (h *Handler) GetSubscriber(w http.ResponseWriter, r *http.Request, memoID g
 		return
 	}
 
-	userFound, ok := lo.Find(resp.Subscribers, func(u *ent.User) bool { return u.ID == userID })
+	si, ok := lo.Find(resp.Subscribers, func(si model.SubscriberInfo) bool { return si.User.ID == userID })
 	if !ok {
 		gen.RespondError(w, r, pkgerr.Known{
 			Code:      pkgerr.CodeNotFound,
@@ -74,7 +76,12 @@ func (h *Handler) GetSubscriber(w http.ResponseWriter, r *http.Request, memoID g
 		return
 	}
 
-	gen.RespondJSON(w, http.StatusOK, gen.Subscriber{ID: userFound.ID})
+	gen.RespondJSON(w, http.StatusOK, gen.Subscriber{
+		ID:       si.User.ID,
+		UserName: si.User.UserName,
+		PhotoURL: si.User.PhotoURL,
+		Approved: si.Approved,
+	})
 }
 
 // Subscribe subscribes a user to a memo.
@@ -95,12 +102,23 @@ func (h *Handler) Subscribe(w http.ResponseWriter, r *http.Request, memoID gen.M
 		return
 	}
 
-	if err := h.memoService.SubscribeMemo(ctx, memoID, passport.Token); err != nil {
+	sub, err := h.memoService.SubscribeMemo(ctx, memoID, passport.Token)
+	if err != nil {
 		gen.RespondError(w, r, fmt.Errorf("subscribing memo: %w", err))
 		return
 	}
 
-	gen.RespondNoContent(w, http.StatusOK)
+	gen.RespondJSON(w, http.StatusOK, gen.SubscribeResponse{
+		Subscription: struct {
+			Approved bool               `json:"approved"`
+			MemoID   openapi_types.UUID `json:"memoId"`
+			UserID   openapi_types.UUID `json:"userId"`
+		}{
+			UserID:   sub.UserID,
+			MemoID:   sub.MemoID,
+			Approved: sub.Approved,
+		},
+	})
 }
 
 // Unsubscribe unsubscribes a user from a memo.
@@ -123,6 +141,35 @@ func (h *Handler) Unsubscribe(w http.ResponseWriter, r *http.Request, memoID gen
 
 	if err := h.memoService.UnsubscribeMemo(ctx, memoID, passport.Token); err != nil {
 		gen.RespondError(w, r, fmt.Errorf("subscribing memo: %w", err))
+		return
+	}
+
+	gen.RespondNoContent(w, http.StatusOK)
+}
+
+// AuthorizeSubscription approves or rejects a subscription request.
+func (h *Handler) AuthorizeSubscription(w http.ResponseWriter, r *http.Request, memoID gen.MemoIDPath, userID gen.UserIDPath) {
+	ctx, span := tracing.StartSpan(r.Context(), "web.handlers.AuthorizeSubscription")
+	defer span.End()
+
+	passport, ok := middleware.ExtractPassport(ctx)
+	if !ok {
+		gen.RespondError(w, r, pkgerr.Known{Code: pkgerr.CodeUnauthenticated, ClientMsg: "need token"})
+		return
+	}
+
+	var req gen.AuthorizeSubscriptionRequest
+	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
+		gen.RespondError(w, r, pkgerr.Known{
+			Code:      pkgerr.CodeBadRequest,
+			Origin:    fmt.Errorf("decoding request body: %w", err),
+			ClientMsg: "invalid request body",
+		})
+		return
+	}
+
+	if err := h.memoService.AuthorizeSubscriber(ctx, memoID, userID, req.Approve, passport.Token); err != nil {
+		gen.RespondError(w, r, fmt.Errorf("authorizing subscriber: %w", err))
 		return
 	}
 
